app/assets/stylesheets/modules/md-side-menu.scss
.md-side-menu {
  background-color: white;
  overflow-x: hidden;
  overflow-y: auto;
}

// --- Outside ---
.md-side-menu-promote {
  margin: 20px;
}

.md-side-menu-promote-text-group {
  margin-bottom: 20px;
  .lead {
    margin: 0;
  }
}

.md-side-menu-promote-button-group {
  text-align: center;
}

.md-side-menu-intro {
  margin: 80px 20px 20px;
  .lead {
    font-weight: bold;
    margin-bottom: 10px;
  }
  ul {
    padding-left: 20px;
    font-size: 16px;
  }
}

// --- User ---
.md-side-menu-user {
  text-align: center;
  margin-bottom: 20px;
}

.md-side-menu-user-picture {
  margin-top: 20px;
  margin-bottom: 10px;
  border-radius: 4px;
}

.md-side-menu-user-name {
  margin: 0;
}

// --- Menu ---
.md-side-menu-actions {
  list-style: none;
  padding: 0;
  margin: 0;
}

.md-side-menu-actions-item {
  width: 100px;
  height: 100px;
  float: left;
}

.md-side-menu-actions-item-anchor {
  width: 100%;
  height: 100%;
  display: block;
  text-align: center;
  padding-top: 25px;
  color: $gray5;
  i {
    display: block;
    font-size: 30px;
  }
  &:hover {
    text-decoration: none;
    color: white;
    background-color: $blueDark;
  }
}

// --- Notifications ---
.md-side-menu-notifications {
  border-top: 1px solid $gray6;
  list-style: none;
  padding: 0;
  margin: 0;
}

